Add feature to use system default file manager to open drive

Added an option in settings to use system default file manager to
open drives. If selected, KDF will use QDesktopServices to open
disk. If unchecked, KDF will use the previous behaviour of executing
supplied command in settings.

BUG: 448764

Signed-off-by: Snehit Sah <snehitsah@protonmail.com>